# pico-lcd16x2_i2c

./: README.md
examples/counter/: CMakeLists.txt  counter.c
examples/hello_lcd16x2/: CMakeLists.txt  hello_lcd16x2.c
examples/timer/: CMakeLists.txt  timer.c
lib/: CMakeLists.txt  lcd16x2_i2c.c
lib/include/: lcd16x2_i2c.h
